More usage of new Java language levels